--- a/src/index.css
+++ b/src/index.css
@@ -28,6 +28,7 @@ h1 {
   place-content: center;
   gap: 4rem;
   margin: 4rem;
+  margin-bottom: 1rem;
 }
 
 @media (max-width: 640px) {
@@ -37,5 +38,6 @@ h1 {
     place-content: center;
     gap: 4rem;
     margin: 4rem;
+    margin-bottom: 1rem;
   }
 }
