--- a/src/index.css
+++ b/src/index.css
@@ -7,13 +7,17 @@ body {
 }
 
 h1 {
-  font-size: 3.2rem;
-  line-height: 1.1;
+  font-size: 3rem;
+  line-height: 1;
+  margin-bottom: 0.5rem;
+  margin-top: 1rem;
   text-align: center;
 }
 .subtext {
   font-style: italic;
   font-size: 1.5rem;
+  margin-top: 1rem;
+  margin-bottom: 1rem;
   text-align: center;
 }
 
@@ -22,12 +26,17 @@ h1 {
   justify-content: center;
   align-items: center;
 }
-
+.BarChart .MuiChartsXAxis-label {
+  font: bold;
+  font-size: 4rem;
+  margin-left: 4rem;
+}
 .options-form {
   display: flex;
   place-content: center;
   gap: 4rem;
   margin: 4rem;
+  margin-top: 3rem;
   margin-bottom: 1rem;
 }
 
